<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">锁屏精灵</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_screen_lock">ScreenLockActivity</string>
    <string name="hint_unlock">向右滑动解锁</string>
    <string name="title_activity_locus_main">LocusMainActivity</string>
    <string name="title_activity_sensor_main">SensorMainActivity</string>
    <string name="dialog_about_me_line1">创造团队: GoogleCamp二队</string>
    <string name="dialog_about_me_line2">团队组成: 许铭淏 陈璐 丁宇笙</string>
    <string name="dialog_about_me_line3">学校: 同济大学</string>
    <string name="dialog_about_me_line4">软件介绍: \n
        								 本软件是一个简简单单的锁屏软件，拥有锁屏、加密以及防盗功能</string>
    <string name="dialog_about_me_line5">使用方法: \n
        								 1.锁屏功能: \n
        								 主界面点击开启锁屏即可，随后关闭屏幕后显示的就是本软件的锁屏界面，注意锁屏界面是轮播图片的形式在显示锁屏界面，让你的锁屏界面不再单调（锁屏图片可以定制，只要将图片放置在MyScreenLockBG的文件夹下，如果你有SD卡，该文件会存在你的SD卡根目录下，否则会在你的手机存储的根目录下）\n\n
        								 2.密码功能:\n
        								 主界面点击开启密码功能，进入九宫格密码设置界面，PS，如果忘记密码，请使用超级密码，超级密码的链接顺序是“1,3,9,7,4,2,6,8,5”\n\n
        								 3.防盗功能:\n
        								 主界面点击开启防盗功能，进入防盗功能界面，将手机至于桌子上或者是其他静止的物体上，点击开启防盗，锁屏即可，如果防盗开启的过程中，手机被拿起，即会报警，输入密码即可关闭防盗功能，注意开启防盗之间要设置密码和打开声音哦~</string>
    

</resources>
