<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dialog_about_me_line1"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="10dp" >
        </FrameLayout>

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dialog_about_me_line2"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="10dp" >
        </FrameLayout>
	    
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dialog_about_me_line3"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="10dp" >
        </FrameLayout>
	    
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dialog_about_me_line4"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
		
	    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="10dp" >
        </FrameLayout>
	    
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dialog_about_me_line5"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>

</ScrollView>